# microbot-launcher

./: README.md  index.html  package-lock.json  package.json  shell.nix  tauri_test.sh
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: jagex_account.rs  main.rs  user_agent.rs
src/components/basic/: HeadingGroup.svelte  Nav.svelte
